file(GLOB_RECURSE CHIP8VM_SOURCES
	"${CMAKE_CURRENT_SOURCE_DIR}/main.c"
)

add_executable(${CHIP8VM_TARGET_NAME} ${CHIP8VM_SOURCES})
target_include_directories(${CHIP8VM_TARGET_NAME} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/../")

FUNCTION(CopyLibToTarget LIB_NAME TARGET_NAME)
	ADD_CUSTOM_COMMAND(TARGET ${TARGET_NAME}
		POST_BUILD
		COMMAND
		${CMAKE_COMMAND} -E copy_if_different
		$<TARGET_FILE:${LIB_NAME}>
		$<TARGET_FILE_DIR:${TARGET_NAME}>
	)
ENDFUNCTION()
