file(GLOB_RECURSE CHIP8VM_SOURCES
	"${CMAKE_CURRENT_SOURCE_DIR}/main.c"
	"${CMAKE_CURRENT_SOURCE_DIR}/platform.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/platform.c"
	"${CMAKE_CURRENT_SOURCE_DIR}/memory.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/memory.c"
	"${CMAKE_CURRENT_SOURCE_DIR}/register.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/register.c"
	"${CMAKE_CURRENT_SOURCE_DIR}/stack.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/stack.c"
	"${CMAKE_CURRENT_SOURCE_DIR}/keyboard.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/keyboard.c"
	"${CMAKE_CURRENT_SOURCE_DIR}/display.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/display.c"
	"${CMAKE_CURRENT_SOURCE_DIR}/timer.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/timer.c"
	"${CMAKE_CURRENT_SOURCE_DIR}/sound.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/sound.c"
	"${CMAKE_CURRENT_SOURCE_DIR}/utility.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/utility.c"
	"${CMAKE_CURRENT_SOURCE_DIR}/vm.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/vm.c"
)

add_executable(${CHIP8VM_TARGET_NAME} ${CHIP8VM_SOURCES})
target_include_directories(${CHIP8VM_TARGET_NAME} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/../")
target_include_directories(${CHIP8VM_TARGET_NAME} PRIVATE "${CMAKE_BINARY_DIR}/_deps/sdl2-src/include")

target_link_libraries(${CHIP8VM_TARGET_NAME} PRIVATE SDL2::SDL2main SDL2::SDL2)

FUNCTION(CopyLibToTarget LIB_NAME TARGET_NAME)
	ADD_CUSTOM_COMMAND(TARGET ${TARGET_NAME}
		POST_BUILD
		COMMAND
		${CMAKE_COMMAND} -E copy_if_different
		$<TARGET_FILE:${LIB_NAME}>
		$<TARGET_FILE_DIR:${TARGET_NAME}>
	)
ENDFUNCTION()

CopyLibToTarget(SDL2main ${CHIP8VM_TARGET_NAME})
CopyLibToTarget(SDL2 ${CHIP8VM_TARGET_NAME})
